$Id: History,v 1.55 2002-10-22 13:25:24 dressel Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Oct  22th, 2002 M.Dressel internal_7_transport-V04-01-01
--------------------------------------------------------
- moving G4CellStoreScorer, G4TrackLogger
  to digits+hits/detector
- resolving G4SLRawValues

Oct  16th, 2002 M.Dressel internal_6_transport-V04-01-01
--------------------------------------------------------
- changes recomanded by codewizrd
- added GCellFinder concept

Oct  10th, 2002 M.Dressel transport-V04-01-01-internal-5
--------------------------------------------------------
- changing sampler concept: instead of separat samplers for
  all combinations of importance sampling, scoring, wieght roulette
  for parallel and mass geometry there are two Samplers now
  for the mass and parallel geometry: G4MassGeometrySampler 
  and G4ParallelGeometrySampler. 
- Introduction of Configurators to setup the processes.


Sep  18th, 2002 M.Dressel transport-V04-01-01-internal-4
--------------------------------------------------------
- tagging a version before reducing the number of Samplers

Sep  2th, 2002 M.dressel  transport-V04-01-01-internal-3
-----------------------------------------