@@ -1,4 +1,4 @@
-$Id: History,v 1.55 2002-10-22 13:25:24 dressel Exp $
+$Id: History,v 1.56 2002-10-28 09:57:23 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct  28th, 2002 M.Dressel cand-01-transport-V05-00-00
+-----------------------------------------------------
+- bug fix in G4MassGeometry
 
 Oct  22th, 2002 M.Dressel internal_7_transport-V04-01-01
 --------------------------------------------------------
